# Komanda-A

./: .gitignore  .gitmodules  CMakeLists.txt  make.sh  run.sh  sliding-log.txt  todo.md
configs/: config.json  sliding_controller.json
junk/: junk.cpp  sync_controller.cpp
scripts/: old_coeffs.py  overturn_control.h
src/: CMakeLists.txt
src/butterfly_robot/: CMakeLists.txt
src/butterfly_robot/inc/butterfly_robot/: butterfly.h  camera.h  device_manager.h  servo.h  servo_protocol.h
src/butterfly_robot/src/: butterfly.cpp  camera.cpp  servo.cpp
src/control_system/: CMakeLists.txt
src/control_system/inc/control_system/: sliding_controller.h
src/control_system/src/: camera_request_state.cpp  control_system.cpp  servo_reference_tracker.cpp  servo_request_state.cpp  servo_set_home_position.cpp  sliding_controller.cpp
src/control_system/tests/: CMakeLists.txt  camera_test.cpp  measurements.cpp  servo_control_test.cpp  servo_pos_test.cpp  sliding_controller_test.cpp  test.cpp
src/utils/: CMakeLists.txt
src/utils/inc/utils/: csv_logger.h  delay_filter.h  diff_filter.h  eigen.h  filters.h  integrator.h  json_bspline.h  utils.h
src/utils/src/: csv_logger.cpp  delay_filter.cpp  diff_filter.cpp
src/utils/tests/: CMakeLists.txt  test_json.cpp
